syntax = "proto3";

package hello;

option java_multiple_files = true;
option java_outer_classname = "HelloProto";
option java_package = "io.grpc.examples.hello";

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
